完成音乐列表界面顶部

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,4 +21,92 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
     </LinearLayout>
+
+    <RadioGroup
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_32"
+        android:paddingStart="@dimen/dp_56"
+        android:paddingEnd="@dimen/dp_56"
+        android:layout_marginTop="@dimen/dp_10"
+        android:checkedButton="@+id/rbtnMusic">
+        <RadioButton
+            android:id="@+id/rbtnMusic"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="歌曲"
+            android:textSize="@dimen/title_text_size"
+            android:textColor="@color/selector_music_list_categoty_color"
+            android:button="@null" />
+        <View
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"/>
+        <RadioButton
+            android:id="@+id/rbtnAlbum"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:textSize="@dimen/title_text_size"
+            android:textColor="@color/selector_music_list_categoty_color"
+            android:text="专辑"
+            android:button="@null"/>
+        <View
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"/>
+        <RadioButton
+            android:id="@+id/rbtnCollect"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:textSize="@dimen/title_text_size"
+            android:textColor="@color/selector_music_list_categoty_color"
+            android:text="收藏"
+            android:button="@null"/>
+    </RadioGroup>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_56"
+        android:gravity="center_vertical">
+        <ImageView
+            android:layout_width="@dimen/dp_24"
+            android:src="@drawable/ic_play_tag"
+            android:layout_marginStart="@dimen/pager_padding"
+            android:layout_height="@dimen/dp_24"/>
+        <TextView
+            android:textColor="@color/common_black"
+            android:textSize="@dimen/title_text_size"
+            android:text="播放全部"
+            android:layout_marginStart="@dimen/dp_10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:textColor="@color/light_gray"
+            android:textSize="@dimen/title_text_size"
+            android:text="0首"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/dp_10"/>
+        <View
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="@dimen/dp_1"/>
+        <ImageView
+            android:src="@drawable/ic_download"
+            android:padding="@dimen/dp_4"
+            android:layout_width="@dimen/dp_32"
+            android:layout_height="@dimen/dp_32"/>
+        <ImageView
+            android:src="@drawable/ic_manager_music_list"
+            android:padding="@dimen/dp_4"
+            android:layout_width="@dimen/dp_32"
+            android:layout_height="@dimen/dp_32"
+            android:layout_marginEnd="@dimen/dp_12"
+            android:layout_marginStart="@dimen/dp_16"/>
+    </LinearLayout>
+    <View
+        android:layout_marginStart="@dimen/pager_padding"
+        android:layout_marginEnd="@dimen/pager_padding"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/px_1"
+        android:background="@color/divider"/>
 </LinearLayout>
