--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="common_white">#FCFCFC</color>
     <color name="common_black">#000000</color>
+    <color name="common_red">#ED334A</color>
+    <color name="light_gray">#CCCCCC</color>
+    <color name="divider">#CCCCCC</color>
 </resources>
