--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,112 +1,127 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:orientation="vertical">
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:gravity="center_vertical"
-        android:layout_height="@dimen/action_bar_height">
+        android:layout_height="@dimen/action_bar_height"
+        android:gravity="center_vertical">
+
         <ImageView
+            android:layout_width="@dimen/dp_32"
+            android:layout_height="@dimen/dp_32"
             android:layout_marginStart="@dimen/dp_12"
             android:padding="@dimen/dp_4"
-            android:src="@drawable/ic_back_left_arrow"
-            android:layout_width="@dimen/dp_32"
-            android:layout_height="@dimen/dp_32"/>
+            android:src="@drawable/ic_back_left_arrow" />
+
         <TextView
-            android:layout_marginStart="@dimen/dp_12"
-            android:textSize="@dimen/title_text_size"
-            android:textColor="@color/common_black"
-            android:text="最近播放"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/dp_12"
+            android:text="最近播放"
+            android:textColor="@color/common_black"
+            android:textSize="@dimen/title_text_size" />
     </LinearLayout>
 
     <RadioGroup
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_32"
+        android:layout_height="@dimen/dp_48"
+        android:checkedButton="@+id/rbtnMusic"
+        android:orientation="horizontal"
         android:paddingStart="@dimen/dp_56"
-        android:paddingEnd="@dimen/dp_56"
-        android:layout_marginTop="@dimen/dp_10"
-        android:checkedButton="@+id/rbtnMusic">
-        <RadioButton
+        android:paddingEnd="@dimen/dp_56">
+
+        <com.luyuanyuan.muiscplayer.ui.IndicatorRadioButton
             android:id="@+id/rbtnMusic"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:button="@null"
             android:text="歌曲"
-            android:textSize="@dimen/title_text_size"
             android:textColor="@color/selector_music_list_categoty_color"
-            android:button="@null" />
+            android:textSize="@dimen/second_title_text_size" />
+
         <View
             android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="match_parent"/>
-        <RadioButton
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+
+        <com.luyuanyuan.muiscplayer.ui.IndicatorRadioButton
             android:id="@+id/rbtnAlbum"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:textSize="@dimen/title_text_size"
-            android:textColor="@color/selector_music_list_categoty_color"
+            android:button="@null"
             android:text="专辑"
-            android:button="@null"/>
+            android:textColor="@color/selector_music_list_categoty_color"
+            android:textSize="@dimen/second_title_text_size" />
+
         <View
             android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="match_parent"/>
-        <RadioButton
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+
+        <com.luyuanyuan.muiscplayer.ui.IndicatorRadioButton
             android:id="@+id/rbtnCollect"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:textSize="@dimen/title_text_size"
-            android:textColor="@color/selector_music_list_categoty_color"
+            android:button="@null"
             android:text="收藏"
-            android:button="@null"/>
+            android:textColor="@color/selector_music_list_categoty_color"
+            android:textSize="@dimen/second_title_text_size" />
     </RadioGroup>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_56"
+        android:layout_height="@dimen/dp_48"
         android:gravity="center_vertical">
+
         <ImageView
             android:layout_width="@dimen/dp_24"
-            android:src="@drawable/ic_play_tag"
+            android:layout_height="@dimen/dp_24"
             android:layout_marginStart="@dimen/pager_padding"
-            android:layout_height="@dimen/dp_24"/>
+            android:src="@drawable/ic_play_tag" />
+
         <TextView
-            android:textColor="@color/common_black"
-            android:textSize="@dimen/title_text_size"
-            android:text="播放全部"
-            android:layout_marginStart="@dimen/dp_10"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:textColor="@color/light_gray"
-            android:textSize="@dimen/title_text_size"
-            android:text="0首"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/dp_10"/>
+            android:layout_marginStart="@dimen/dp_10"
+            android:text="播放全部"
+            android:textColor="@color/common_black"
+            android:textSize="@dimen/second_title_text_size" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/dp_10"
+            android:text="0首"
+            android:textColor="@color/light_gray"
+            android:textSize="@dimen/second_title_text_size" />
+
         <View
             android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="@dimen/dp_1"/>
+            android:layout_height="@dimen/dp_1"
+            android:layout_weight="1" />
+
         <ImageView
-            android:src="@drawable/ic_download"
-            android:padding="@dimen/dp_4"
-            android:layout_width="@dimen/dp_32"
-            android:layout_height="@dimen/dp_32"/>
-        <ImageView
-            android:src="@drawable/ic_manager_music_list"
-            android:padding="@dimen/dp_4"
             android:layout_width="@dimen/dp_32"
             android:layout_height="@dimen/dp_32"
+            android:padding="@dimen/dp_4"
+            android:src="@drawable/ic_download" />
+
+        <ImageView
+            android:layout_width="@dimen/dp_32"
+            android:layout_height="@dimen/dp_32"
+            android:layout_marginStart="@dimen/dp_16"
             android:layout_marginEnd="@dimen/dp_12"
-            android:layout_marginStart="@dimen/dp_16"/>
+            android:padding="@dimen/dp_4"
+            android:src="@drawable/ic_manager_music_list" />
     </LinearLayout>
+
     <View
-        android:layout_marginStart="@dimen/pager_padding"
-        android:layout_marginEnd="@dimen/pager_padding"
         android:layout_width="match_parent"
         android:layout_height="@dimen/px_1"
-        android:background="@color/divider"/>
+        android:layout_marginStart="@dimen/pager_padding"
+        android:layout_marginEnd="@dimen/pager_padding"
+        android:background="@color/divider" />
 </LinearLayout>
