--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="action_bar_height">56dp</dimen>
+    <dimen name="action_bar_height">48dp</dimen>
     <dimen name="title_text_size">18sp</dimen>
+    <dimen name="second_title_text_size">17sp</dimen>
+    <dimen name="content_text_size">15sp</dimen>
     <dimen name="pager_padding">16dp</dimen>
 
     <dimen name="px_1">1px</dimen>
