完成本地音乐列表信息读取

--- a/app/src/main/res/drawable/ic_music_list_more.xml
+++ b/app/src/main/res/drawable/ic_music_list_more.xml
@@ -3,7 +3,7 @@
     android:height="24dp"
     android:viewportWidth="1024"
     android:viewportHeight="1024">
-  <path
-      android:fillColor="#000000"
-      android:pathData="M560,272a48,48 0,1 1,-96 0,48 48,0 0,1 96,0zM560,512a48,48 0,1 1,-96 0,48 48,0 0,1 96,0zM560,752a48,48 0,1 1,-96 0,48 48,0 0,1 96,0z"/>
+    <path
+        android:fillColor="#CCCCCC"
+        android:pathData="M560,272a48,48 0,1 1,-96 0,48 48,0 0,1 96,0zM560,512a48,48 0,1 1,-96 0,48 48,0 0,1 96,0zM560,752a48,48 0,1 1,-96 0,48 48,0 0,1 96,0z" />
 </vector>
