--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,124 +4,18 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <LinearLayout
+    <include layout="@layout/action_bar_music_list" />
+
+    <include layout="@layout/music_list_category_bar" />
+
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/action_bar_height"
-        android:gravity="center_vertical">
-
-        <ImageView
-            android:layout_width="@dimen/dp_32"
-            android:layout_height="@dimen/dp_32"
-            android:layout_marginStart="@dimen/dp_12"
-            android:padding="@dimen/dp_4"
-            android:src="@drawable/ic_back_left_arrow" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/dp_12"
-            android:text="最近播放"
-            android:textColor="@color/common_black"
-            android:textSize="@dimen/title_text_size" />
-    </LinearLayout>
-
-    <RadioGroup
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_48"
-        android:checkedButton="@+id/rbtnMusic"
-        android:orientation="horizontal"
-        android:paddingStart="@dimen/dp_56"
-        android:paddingEnd="@dimen/dp_56">
-
-        <com.luyuanyuan.muiscplayer.ui.IndicatorRadioButton
-            android:id="@+id/rbtnMusic"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:button="@null"
-            android:text="歌曲"
-            android:textColor="@color/selector_music_list_categoty_color"
-            android:textSize="@dimen/second_title_text_size" />
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
-
-        <com.luyuanyuan.muiscplayer.ui.IndicatorRadioButton
-            android:id="@+id/rbtnAlbum"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:button="@null"
-            android:text="专辑"
-            android:textColor="@color/selector_music_list_categoty_color"
-            android:textSize="@dimen/second_title_text_size" />
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
-
-        <com.luyuanyuan.muiscplayer.ui.IndicatorRadioButton
-            android:id="@+id/rbtnCollect"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:button="@null"
-            android:text="收藏"
-            android:textColor="@color/selector_music_list_categoty_color"
-            android:textSize="@dimen/second_title_text_size" />
-    </RadioGroup>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_48"
-        android:gravity="center_vertical">
-
-        <ImageView
-            android:layout_width="@dimen/dp_24"
-            android:layout_height="@dimen/dp_24"
-            android:layout_marginStart="@dimen/pager_padding"
-            android:src="@drawable/ic_play_tag" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/dp_10"
-            android:text="播放全部"
-            android:textColor="@color/common_black"
-            android:textSize="@dimen/second_title_text_size" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/dp_10"
-            android:text="0首"
-            android:textColor="@color/light_gray"
-            android:textSize="@dimen/second_title_text_size" />
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="@dimen/dp_1"
-            android:layout_weight="1" />
-
-        <ImageView
-            android:layout_width="@dimen/dp_32"
-            android:layout_height="@dimen/dp_32"
-            android:padding="@dimen/dp_4"
-            android:src="@drawable/ic_download" />
-
-        <ImageView
-            android:layout_width="@dimen/dp_32"
-            android:layout_height="@dimen/dp_32"
-            android:layout_marginStart="@dimen/dp_16"
-            android:layout_marginEnd="@dimen/dp_12"
-            android:padding="@dimen/dp_4"
-            android:src="@drawable/ic_manager_music_list" />
-    </LinearLayout>
+        android:layout_height="0dp"
+        android:layout_weight="1" />
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="@dimen/px_1"
-        android:layout_marginStart="@dimen/pager_padding"
-        android:layout_marginEnd="@dimen/pager_padding"
-        android:background="@color/divider" />
+        android:layout_height="60dp"
+        android:background="@android:color/holo_purple" />
 </LinearLayout>
