--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,7 @@
     <dimen name="title_text_size">18sp</dimen>
     <dimen name="second_title_text_size">17sp</dimen>
     <dimen name="content_text_size">15sp</dimen>
+    <dimen name="summary_text_size">13sp</dimen>
     <dimen name="pager_padding">16dp</dimen>
 
     <dimen name="px_1">1px</dimen>
